--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>CSCE 190: Coy Burke</title>
+	</head>	
+	<body>
+		<h1>Coy Burke's CSCE 190 Site</h1>
+	</body>
+	Hello World!
