--- a/index.html
+++ b/index.html
@@ -5,5 +5,13 @@
 	</head>	
 	<body>
 		<h1>Coy Burke's CSCE 190 Site</h1>
+
+		<section class="assignment">
+			<a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
+			<section class="assignment-details"><a href="files/problem-statement.pdf"><h2>Problem Statement: Organizing Digital Communication </h2></a>
+				<p>
+					Our users are having trouble keeping track of and responding to important messages because they are spread out across multiple messaging services.
+				</p>
+		</section>
 	</body>
 </html>
