--- a/index.html
+++ b/index.html
@@ -2,15 +2,27 @@
 <html>
 	<head>
 		<title>CSCE 190: Coy Burke</title>
+		<link rel="stylesheet" href="styles.css">
 	</head>	
 	<body>
 		<h1>Coy Burke's CSCE 190 Site</h1>
-
+		<!-- Problem Statement Assignment -->
 		<section class="assignment">
 			<a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
-			<section class="assignment-details"><a href="files/problem-statement.pdf"><h2>Problem Statement: Organizing Digital Communication </h2></a>
+			<section class="assignment-details">
+				<a href="files/problem-statement.pdf"><h2>Problem Statement: Organizing Digital Communication </h2></a>
 				<p>
 					Our users are having trouble keeping track of and responding to important messages because they are spread out across multiple messaging services.
+				</p>
+		</section>
+		
+		<!--Affinity Diagram Assignment -->
+		<section class="assignment">
+			<a href="files/jamboard.pdf"><img src="images/jamboard.png"></a>
+			<section class="assignment-details">
+				<a href="files/jamboard.pdf"><h2>Affinity Diagram: Organizing Digital Communication </h2></a>
+				<p>
+					Our group used Google's Jamboard tool to get our ideas "on paper" so we could group and organize them.
 				</p>
 		</section>
 	</body>
