--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 				<p>
 					Our users are having trouble keeping track of and responding to important messages because they are spread out across multiple messaging services.
 				</p>
+			</section>
 		</section>
-		
+
 		<!--Affinity Diagram Assignment -->
 		<section class="assignment">
 			<a href="files/jamboard.pdf"><img src="images/jamboard.png"></a>
@@ -24,6 +25,18 @@
 				<p>
 					Our group used Google's Jamboard tool to get our ideas "on paper" so we could group and organize them.
 				</p>
+			</section>
+		</section>
+
+		<!--Personna Assignment-->
+		<section class="assignment">
+			<a href="files/persona.pdf"><img src="images/persona.png"></a>
+			<section class="assignment-details">
+				<a href="files/persona.pdf"><h2>Persona: 3 Personas for Digital Communication Users</h2></a>
+				<p>
+					Each member of our group created a persona of a Digital Communication User.
+				</p>
+			</section>
 		</section>
 	</body>
 </html>
