--- a/index.html
+++ b/index.html
@@ -38,5 +38,17 @@
 				</p>
 			</section>
 		</section>
+
+		<!--Storyboard Assignment-->
+		<section class="assignment">
+			<a href="files/storyboard.pdf"><img src="images/storyboard.png"></a>
+			<section class="assignment-details">
+				<a href="files/storyboard.pdf"><h2>Storyboards for Digital Communication</h2></a>
+				<p>
+					A few storyboards demonstrating different use-cases in which organized digital communications are helpful.
+				</p>
+			</section>
+		</section>
+
 	</body>
 </html>
