--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</section>
 		</section>
 
-		<!--Personna Assignment-->
+		<!--Persona Assignment-->
 		<section class="assignment">
 			<a href="files/persona.pdf"><img src="images/persona.png"></a>
 			<section class="assignment-details">
@@ -46,6 +46,17 @@
 				<a href="files/storyboard.pdf"><h2>Storyboards for Digital Communication</h2></a>
 				<p>
 					A few storyboards demonstrating different use-cases in which organized digital communications are helpful.
+				</p>
+			</section>
+		</section>
+
+		<!--Sketches Assignment-->
+		<section class="assignment">
+			<a href="files/sketches.pdf"><img src="images/sketches.png"></a>
+			<section class="assignment-details">
+				<a href="files/sketches.pdf"><h2>App Design Sketches</h2></a>
+				<p>
+					Sketches of the design of the app and its features.
 				</p>
 			</section>
 		</section>
