--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	</head>	
 	<body>
 		<h1>Coy Burke's CSCE 190 Site</h1>
+		
+		<div class="assignments">
 		<!-- Problem Statement Assignment -->
 		<section class="assignment">
 			<a href="files/problem-statement.pdf"><img src="images/problem-statement.png"></a>
@@ -61,5 +63,16 @@
 			</section>
 		</section>
 
+<!--Paper Prototype Assignment-->
+		<section class="assignment">
+			<a href="https://youtu.be/r1MJwVazbC8"><img src="images/paper-prototype.jpg"></a>
+			<section class="assignment-details">
+				<a href="https://youtu.be/r1MJwVazbC8"><h2>Paper Prototype</h2></a>
+				<p>
+					A demo of the app with a paper prototype.
+				</p>
+			</section>
+		</section>
+		</div>
 	</body>
 </html>
