--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			</section>
 		</section>
 
-<!--Paper Prototype Assignment-->
+		<!--Paper Prototype Assignment-->
 		<section class="assignment">
 			<a href="https://youtu.be/r1MJwVazbC8"><img src="images/paper-prototype.jpg"></a>
 			<section class="assignment-details">
@@ -73,6 +73,17 @@
 				</p>
 			</section>
 		</section>
+
+			<!--Paper Prototype Assignment-->
+			<section class="assignment">
+				<a href="files/usability.pdf"><img src="images/usability.png"></a>
+				<section class="assignment-details">
+					<a href="files/usability.pdf"><h2>Usability Testing</h2></a>
+					<p>
+						The results of usability testing, including improvements that we would like to make to our prototype.
+					</p>
+				</section>
+			</section>
 		</div>
 	</body>
 </html>
