--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			</section>
 		</section>
 
-			<!--Paper Prototype Assignment-->
+			<!--Usability Testing Assignment-->
 			<section class="assignment">
 				<a href="files/usability.pdf"><img src="images/usability.png"></a>
 				<section class="assignment-details">
@@ -84,6 +84,17 @@
 					</p>
 				</section>
 			</section>
+
+				<!--Lo-fi Prototype Assignment-->
+				<section class="assignment">
+					<a href="files/lofi-prototype/index.html"><img src="images/lofi-prototype.png"></a>
+					<section class="assignment-details">
+						<a href="files/lofi-prototype/index.html"><h2>Lo-Fi Prototype</h2></a>
+						<p>
+							A lo-fi prototype of the app for the purpose of fine-tuning and testing.
+						</p>
+					</section>
+				</section>
 		</div>
 	</body>
 </html>
