--- a/index.html
+++ b/index.html
@@ -95,6 +95,17 @@
 						</p>
 					</section>
 				</section>
+
+			<section class="assignment">
+				<a href="files/hifi-prototype/index.html"><img src="images/hifi-prototype.png"></a>
+				<section class="assignment-details">
+					<a href="files/hifi-prototype/index.html"><h2>Hi-Fi Prototype</h2></a>
+					<p>
+						A high-fidelity prototype of the app that improves upon the lo-fi prototype.
+						Changes made were based on feedback given about the lo-fi prototype.
+					</p>
+				</section>
+			</section>
 		</div>
 	</body>
 </html>
