--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</section>
 
 			<section class="assignment">
-				<a href="files/hifi-prototype/index.html"><img src="images/hifi-prototype.png"></a>
+				<a href="files/hifi-prototype/index.html#7"><img src="images/hifi-prototype.png"></a>
 				<section class="assignment-details">
 					<a href="files/hifi-prototype/index.html"><h2>Hi-Fi Prototype</h2></a>
 					<p>
