--- a/index.html
+++ b/index.html
@@ -97,12 +97,22 @@
 				</section>
 
 			<section class="assignment">
-				<a href="files/hifi-prototype/index.html#7"><img src="images/hifi-prototype.png"></a>
+				<a href="files/hifi-prototype/index.html"><img src="images/hifi-prototype.png"></a>
 				<section class="assignment-details">
-					<a href="files/hifi-prototype/index.html#7"><h2>Hi-Fi Prototype</h2></a>
+					<a href="files/hifi-prototype/index.html"><h2>Hi-Fi Prototype</h2></a>
 					<p>
 						A high-fidelity prototype of the app that improves upon the lo-fi prototype.
 						Changes made were based on feedback given about the lo-fi prototype.
+					</p>
+				</section>
+			</section>
+
+			<section class="assignment">
+				<a href="https://youtu.be/-LeszX9qSow"><img src="images/final-presentation.png"></a>
+				<section class="assignment-details">
+					<a href="https://youtu.be/-LeszX9qSow"><h2>Hi-Fi Prototype Presentation</h2></a>
+					<p>
+						A presentation of our group's application, including an introduction and a walkthrough of the features.
 					</p>
 				</section>
 			</section>
