--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Coy Burke</title>
+		<title>github.io Coy Burke</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>	
 	<body>
